--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -65,9 +65,9 @@
                                         <img class="comment-img rounded-circle"
                                              src="{{ asset('images/alien-profile.png') }}">
                                         <div class="comment-container d-inline-block pl-3 align-top">
-                                            <span class="commenter-name">Mike Ferengi</span>
+                                            <span class="commenter-name">{{ comment.authorName }}</span>
                                             <br>
-                                            <span class="comment"> {{ comment }}</span>
+                                            <span class="comment"> {{ comment.content }}</span>
                                             <p><a href="#">Reply</a></p>
                                         </div>
                                     </div>
