--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -59,7 +59,7 @@
                                 </div>
                             </div>
 
-                            {% for comment in comments %}
+                            {% for comment in article.comments %}
                                 <div class="row">
                                     <div class="col-sm-12">
                                         <img class="comment-img rounded-circle"
