--- a/templates/comment_admin/index.html.twig
+++ b/templates/comment_admin/index.html.twig
@@ -8,6 +8,21 @@
     <div class="row">
         <div class="col-sm-12">
             <h1>Manage Comments</h1>
+            <form>
+                <div class="input-group mb-3">
+                    <input type="text"
+                           name="q"
+                           class="form-control"
+                           placeholder="Search..."
+                    >
+                    <div class="input-group-append">
+                        <button type="submit"
+                                class="btn btn-outline-secondary">
+                            <span class="fa fa-search"></span>
+                        </button>
+                    </div>
+                </div>
+            </form>
             <table class="table table-striped">
                 <thead>
                 <tr>
@@ -19,24 +34,22 @@
                 </thead>
                 <tbody>
                 {% for comment in comments %}
-                    {% for comment in comments %}
-                        <tr>
-                            <td>
-                                <a href="{{ path('article_show', {'slug': comment.article.slug}) }}">
-                                    {{ comment.article.title }}
-                                </a>
-                            </td>
-                            <td>
-                                {{ comment.authorName }}
-                            </td>
-                            <td style="width: 20%;">
-                                {{ comment.content|truncate }}
-                            </td>
-                            <td>
-                                {{ comment.createdAt|ago }}
-                            </td>
-                        </tr>
-                    {% endfor %}
+                    <tr>
+                        <td>
+                            <a href="{{ path('article_show', {'slug': comment.article.slug}) }}">
+                                {{ comment.article.title }}
+                            </a>
+                        </td>
+                        <td>
+                            {{ comment.authorName }}
+                        </td>
+                        <td style="">
+                            {{ comment.content|truncate }}
+                        </td>
+                        <td>
+                            {{ comment.createdAt|ago }}
+                        </td>
+                    </tr>
                 {% endfor %}
                 </tbody>
             </table>
