--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -11,25 +11,33 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                {# todo - replace with a Symfony form! #}
-                <form class="form-signin" method="post">
-                    <h1 class="h3 mb-3 font-weight-normal">Register</h1>
-                    <label for="inputEmail" class="sr-only">Email address</label>
-                    <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address"
-                           required autofocus>
-                    <label for="inputPassword" class="sr-only">Password</label>
-                    <input type="password" name="password" id="inputPassword" class="form-control"
-                           placeholder="Password" required>
-                    <div class="checkbox mb-3">
-                        <label>
-                            <input type="checkbox" name="_remember_me" required> Agree to terms I for sure read
-                        </label>
-                    </div>
-                    <button class="btn btn-lg btn-primary btn-block" type="submit">
-                        Register
-                    </button>
-                </form>
+                {#                #}{# todo - replace with a Symfony form! #}
+                {#                <form class="form-signin" method="post">#}
+                                    <h1 class="h3 mb-3 font-weight-normal">Register</h1>
+                {#                    <label for="inputEmail" class="sr-only">Email address</label>#}
+                {#                    <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address"#}
+                {#                           required autofocus>#}
+                {#                    <label for="inputPassword" class="sr-only">Password</label>#}
+                {#                    <input type="password" name="password" id="inputPassword" class="form-control"#}
+                {#                           placeholder="Password" required>#}
+                {#                    <div class="checkbox mb-3">#}
+                {#                        <label>#}
+                {#                            <input type="checkbox" name="_remember_me" required> Agree to terms I for sure read#}
+                {#                        </label>#}
+                {#                    </div>#}
+                {#                    <button class="btn btn-lg btn-primary btn-block" type="submit">#}
+                {#                        Register#}
+                {#                    </button>#}
+                {#                </form>#}
+                {{ form_start(registrationForm) }}
+                {{ form_widget(registrationForm) }}
+{#                {{ form_widget(registrationForm.register, {label: 'Register'}) }}#}
+                <button class="btn btn-lg btn-primary btn-block" type="submit">
+                    Register
+                </button>
+                {{ form_end(registrationForm) }}
             </div>
         </div>
     </div>
+
 {% endblock %}
