--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -11,7 +11,6 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                {#                #}{# todo - replace with a Symfony form! #}
                 {#                <form class="form-signin" method="post">#}
                 <h1 class="h3 mb-3 font-weight-normal">Register</h1>
                 {#                    <label for="inputEmail" class="sr-only">Email address</label>#}
@@ -29,7 +28,7 @@
                 {#                        Register#}
                 {#                    </button>#}
                 {#                </form>#}
-                {{ form_start(registrationForm) }}
+                {{ form_start(registrationForm, {'attr' : {'class' : 'form-signin', 'novalidate' : 'true'}}) }}
                 {{ form_widget(registrationForm) }}
                 {#                {{ form_widget(registrationForm.register, {label: 'Register'}) }}#}
                 <button class="btn btn-lg btn-primary btn-block" type="submit">
