--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -6,14 +6,16 @@
     {%- if help is not empty -%}
         {%- set widget_attr = {attr: {'aria-describedby': id ~"_help"}} -%}
     {%- endif -%}
+    {#    {{ dump() }}#}
     <div>
-        {{- form_label(form) -}}
+        {{- form_label(form, null, {
+            label_attr: { class: 'sr-only' }
+        }) -}}
         {{- form_errors(form) -}}
         {{- form_widget(form, widget_attr) -}}
         {{- form_help(form) -}}
     </div>
 {%- endblock form_row -%}
-
 
 {% block title %}Register!{% endblock %}
 
@@ -26,30 +28,21 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                {#                <form class="form-signin" method="post">#}
                 <h1 class="h3 mb-3 font-weight-normal">Register</h1>
-                {#                    <label for="inputEmail" class="sr-only">Email address</label>#}
-                {#                    <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address"#}
-                {#                           required autofocus>#}
-                {#                    <label for="inputPassword" class="sr-only">Password</label>#}
-                {#                    <input type="password" name="password" id="inputPassword" class="form-control"#}
-                {#                           placeholder="Password" required>#}
-                {#                    <div class="checkbox mb-3">#}
-                {#                        <label>#}
-                {#                            <input type="checkbox" name="_remember_me" required> Agree to terms I for sure read#}
-                {#                        </label>#}
-                {#                    </div>#}
-                {#                    <button class="btn btn-lg btn-primary btn-block" type="submit">#}
-                {#                        Register#}
-                {#                    </button>#}
-                {#                </form>#}
+
                 {{ form_start(registrationForm, {'attr' : {'class' : 'form-signin', 'novalidate' : 'true'}}) }}
-                {{ form_widget(registrationForm) }}
-                {#                {{ form_widget(registrationForm.register, {label: 'Register'}) }}#}
+                {{ form_row(registrationForm.email,
+                    {attr: {placeholder: 'Email'}}
+                ) }}
+                {{ form_row(registrationForm.plainPassword,
+                    {attr: {placeholder: 'Password'}}
+                ) }}
+                {{ form_row(registrationForm.agreeTerms) }}
                 <button class="btn btn-lg btn-primary btn-block" type="submit">
                     Register
                 </button>
                 {{ form_end(registrationForm) }}
+                
             </div>
         </div>
     </div>
