--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -24,6 +24,15 @@
     <link rel="stylesheet" href="{{ asset('css/login.css') }}">
 {% endblock %}
 
+{% block _user_registration_form_agreeTerms_row %}
+    <div class="checkbox mb-3">
+        {{ form_errors(form) }}
+        <label>
+            <input type="checkbox" name="{{ full_name }}" required> Agree to terms I for sure read
+        </label>
+    </div>
+{% endblock %}
+
 {% block body %}
     <div class="container">
         <div class="row">
@@ -42,7 +51,7 @@
                     Register
                 </button>
                 {{ form_end(registrationForm) }}
-                
+
             </div>
         </div>
     </div>
