25 Custom Field: configureOptions() & Allowing Empty Input

--- a/templates/article_admin/_form.html.twig
+++ b/templates/article_admin/_form.html.twig
@@ -1,4 +1,4 @@
-{{ form_start(articleForm) }}
+{{ form_start(articleForm, {'attr' : {'novalidate' : 'true'}})}}
     {{ form_row(articleForm.title, {label : 'Заголовок'}) }}
     {{ form_row(articleForm.author) }}
     {{ form_row(articleForm.content) }}
