--- a/templates/article_admin/edit.html.twig
+++ b/templates/article_admin/edit.html.twig
@@ -1,4 +1,8 @@
 {% extends 'content_base.html.twig' %}
+{% block javascripts %}
+    {{ parent() }}
+    <script src="https://cdn.jsdelivr.net/autocomplete.js/0/autocomplete.jquery.min.js"></script>
+{% endblock %}
 {% block content_body %}
     <h1>Launch a new Article! ?</h1>
     {{ include('article_admin/_form.html.twig', {'button_text': 'Update!'}) }}
