--- a/templates/article_admin/new.html.twig
+++ b/templates/article_admin/new.html.twig
@@ -1,4 +1,14 @@
 {% extends 'content_base.html.twig' %}
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('css/algolia.css') }}">
+{% endblock %}
+{% block javascripts %}
+    {{ parent() }}
+    <script src="https://cdn.jsdelivr.net/algoliasearch/3/algoliasearch.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/autocomplete.js/0/autocomplete.jquery.min.js"></script>
+    <script src="{{ asset('js/algolia-autocomplete.js') }}"></script>
+{% endblock %}
 {% block content_body %}
     <h1>Launch a new Article! ?</h1>
     {{ include('article_admin/_form.html.twig',
