--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -2,7 +2,7 @@
 {% block title %}Manage Account!{% endblock %}
 {% block stylesheets %}
     {{ parent() }}
-    <link rel="stylesheet" href="{{ asset('css/login.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/account.css') }}">
 {% endblock %}
 {% block body %}
     <div class="container">
