--- a/templates/article_admin/_form.html.twig
+++ b/templates/article_admin/_form.html.twig
@@ -1,6 +1,8 @@
 {{ form_start(articleForm, {'attr' : {'novalidate' : 'true'}}) }}
     {{ form_row(articleForm.title, {label : 'Заголовок'}) }}
     {{ form_row(articleForm.author) }}
+    {{ form_row(articleForm.location) }}
+    {{ form_row(articleForm.specificLocationName) }}
     {{ form_row(articleForm.content) }}
     {% if articleForm.publishedAt is defined %}
         {{ form_row(articleForm.publishedAt) }}
