--- a/templates/article_admin/new.html.twig
+++ b/templates/article_admin/new.html.twig
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/algoliasearch/3/algoliasearch.min.js"></script>
     <script src="https://cdn.jsdelivr.net/autocomplete.js/0/autocomplete.jquery.min.js"></script>
     <script src="{{ asset('js/algolia-autocomplete.js') }}"></script>
+    <script src="{{ asset('js/admin_article_form.js') }}"></script>
 {% endblock %}
 {% block content_body %}
     <h1>Launch a new Article! ?</h1>
